stylesheet.less
/* ... */
.widget.navigation li:hover > ul > li > a:hover {
  color: @color-swatch3;
}

/* EXTENDED NAV */

.widget.extendednavigation {
  float: right;
  position: relative;
  margin-top: 18px;
}

.widget.extendednavigation ul {
  float: left;
  padding: 0;
  margin: 0;
}

.widget.extendednavigation ul.align-center li
{
  text-align: center;
}

.widget.extendednavigation ul.align-left li
{
  text-align: left;
}

.widget.extendednavigation ul.align-right li
{
  text-align: right;
}

.widget.extendednavigation ul li {
  float: left;
  display: block;
}

.widget.extendednavigation ul li:hover {
  color: @color-swatch3;
}

.widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
  display: block;
  padding: 1em 2em;
  font-family: @font-swatch6-font-family;
  font-size: @font-swatch6-font-size;
  color: darken(@color-swatch5,10%);
}
.widget.extendednavigation ul li a:hover {
  text-decoration: none;
}

.widget.extendednavigation ul li.folder {
  background-image: image('/images/arrow-down.png');
  background-position: right center;
  background-repeat: no-repeat;
  height: 100%;
  cursor: pointer;
}

.widget.extendednavigation li a:hover {
  color: @color-swatch3;
}

.widget.extendednavigation li > ul {
  display: none;
}
.widget.extendednavigation li:hover > ul {
  display: block;
  width: 180px;
  position: absolute;
  z-index: 500;
  background-color: @color-swatch4;
  padding-top: 42px;
  padding-bottom: 10px;
  border-top: none;
  border-bottom: 4px solid @color-swatch3;
}
.widget.extendednavigation li:hover > ul > li {
  display: block;
  width: 100%;
  text-align: left;
}

.widget.extendednavigation li:hover > ul > li > a {
  display: block;
  background-image: none;
  color: @color-swatch5;
  padding: 0;
}

.widget.extendednavigation li:hover > ul > li > a:hover {
  color: @color-swatch3;
}


/* FEATURE */

.widget.feature {
  width: 100%;
  margin-bottom: 0em;
  height: 315px;
}

.widget.feature .bgimage
{
  height: 315px;
}

.widget.feature .content {
    width: 100%;
    position: absolute;
    bottom: 0;
    background: hsla(hue(@color-swatch2), saturation(@color-swatch2), lightness(@color-swatch2), 0.8);  
    padding: 1.8em 0;
}

.widget.feature .content .spare {
  display: block;
  margin: 0 auto;
  max-width: 960px;
}

.widget.feature h2 {
  color: @color-swatch4;
  letter-spacing: -1px;
  font-size: 2.3em;
  padding-bottom: 6px;
}

.widget.feature h3 {
  color: lighten(@color-swatch5,20%);
  letter-spacing: 0;
  font-size: 1em;
  padding-bottom: 0;
}

.widget.feature button
{
  padding: 1.2em 2em;
  margin: 3em 0 1em;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
  box-shadow: 0 0 0 3px rgba(0,0,0,0.1);
  border: none;

  font-family: @font-swatch7-font-family;
  font-size: 14px;
  font-weight:@font-swatch7-font-weight;
  background-color: @color-swatch2;
  color: @color-swatch4;
  text-decoration: none;
  letter-spacing: 2px;
}

.widget.feature button:hover 
{
    background-color: @color-swatch3;
    cursor: pointer;
}

.widget.feature button.btn.justifyleft
{
    text-align: left;
}

.widget.feature button.btn.justifycenter
{
    text-align: center;
}

.widget.feature button.btn.justifyright
{
    text-align: right;
}

.widget.feature button.btn.justifyfull
{
    text-align: justify;
}

.widget.feature button.btn.italic {
    font-style: italic;
}

.widget.feature button.btn.bold {
    font-weight: bold;
}

.widget.feature button span {
    vertical-align: center;
}

.widget.feature button i {
    margin-right: 5px;
}


/* Twitter CSS */

.widget.twitter {
}

.widget.twitter a {
  font-family:@font-swatch5-font-family;
  font-size:12px;
  font-weight:@font-swatch5-font-weight;
  color:@color-swatch2;
  text-decoration: none;
}

.widget.twitter a:hover {
    text-decoration: underline;
    cursor: pointer;
}

.widget.twitter ul {
    padding: 0;
    margin: 0;
}

.widget.twitter ul li {
    border-bottom: none;
    list-style: none;
    font-family: @font-swatch5-font-family;
    font-size: 12px;
    color: @font-swatch5-color;
    padding-bottom: 30px;
}

.widget.twitter ul li:last-child {
    padding-bottom: 0px;
}

.widget.twitter .twitter-profile-pic {
    float: left;
    margin-right: 20px;
}

.widget.twitter .twitter-content span.bk-full-name {
    font-family:@font-swatch2-font-family;
    font-size: 15px;
    font-weight:@font-swatch5-font-weight;
    color:@color-swatch2;
    text-decoration: none;
}

.widget.twitter .twitter-content p {
   margin-top: 6px;
}


/* Form CSS */

.widget.contactform form {
    padding: 20px;
    margin: 30px 0;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background-color: lighten(@color-swatch5,23%);
}

.widget.contactform fieldset {
    border: none;
    padding: 0;
    margin: 0;
}

.widget.contactform fieldset label {
    width: 100%;
    float: left;
    font-family:@font-swatch1-font-family;
    font-size:@font-swatch4-font-size;
    font-weight:@font-swatch4-font-weight;
    line-height:@font-swatch4-line-height;
    color:@color-swatch1;
    letter-spacing: -1px;
    margin-bottom: 8px;
}

.widget.contactform fieldset input {
    height: 44px;
    width: 100%;
    border: 1px solid lighten(@color-swatch5,15%);
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight:@font-swatch5-font-weight;
    color:@font-swatch5-color;
    background-image: image('/images/form-bg.png');
    background-repeat: repeat;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    text-indent: 50px;
    margin-top: 6px;
    margin-bottom: 30px;
}

::-webkit-input-placeholder, :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder  {
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight:@font-swatch5-font-weight;
    color:@font-swatch5-color;
}
/* ... */

